--- a/index.html
+++ b/index.html
@@ -26,108 +26,120 @@
     <div class="sidenav">
       <ul class="nav flex-column d-block">
         <li class="nav-item my-1">
-          <button type="button" class="btn btn-sm btn-color btn-block" href="#Home">
+          <button
+            type="button"
+            class="btn btn-sm btn-color btn-block"
+            href="#Home"
+          >
             <i class="fa fa-home"></i>
             Home
           </button>
         </li>
         <li class="nav-item my-1">
-          <button type="button" class="btn btn-sm btn-color btn-block" href="#Contact">
+          <button
+            type="button"
+            class="btn btn-sm btn-color btn-block"
+            href="#Contact"
+          >
             <i class="bi bi-at"></i>
             Contact
           </button>
         </li>
         <li class="nav-item my-1">
-          <button type="button" class="btn btn-sm btn-color btn-block" href="#Info">
+          <button
+            type="button"
+            class="btn btn-sm btn-color btn-block"
+            href="#About"
+          >
             <i class="bi bi-info-circle-fill"></i>
-            Info
+            About
           </button>
         </li>
       </ul>
     </div>
- 
+
     <div class="main-content">
       <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
+          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
+          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
+          doloremque.
+        </p>
+      </div>
     </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-        ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-        obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-        doloremque.
-      </p>
-    </div>
-  </div>
     <script src="./app.js"></script>
   </body>
 </html>
