--- a/index.html
+++ b/index.html
@@ -59,21 +59,18 @@
     </div>
 
     <div class="main-content">
-      <div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-          doloremque.
-        </p>
+      <div class="card">
+        <img
+          class="card-img-top"
+          src="./imgs/santaslittlehelper.png"
+          alt="dog"
+        />
+        <div class="card-body">Santa's Little Helper</div>
       </div>
-      <div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-          doloremque.
-        </p>
+
+      <div class="card">
+        <img class="card-img-top" src="./imgs/2stupiddogs.png" alt="dog" />
+        <div class="card-body">SPECIAL: Two Stupid Dogs</div>
       </div>
       <div>
         <p>
