--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="card">
         <img
           class="card-img-top"
-          src="./imgs/santaslittlehelper.png"
+          src="./imgs/santashelper.png"
           alt="dog"
         />
         <div class="card-body">Santa's Little Helper</div>
