--- a/index.html
+++ b/index.html
@@ -22,72 +22,87 @@
     <title>Pet Store</title>
   </head>
   <body>
-    <header>Best Pet Store Ever</header>
+    <header>John Paul's Pet Store</header>
     <div class="sidenav">
       <ul class="nav flex-column d-block">
         <li class="nav-item my-1">
-          <button
+          <a
             type="button"
             class="btn btn-sm btn-color btn-block"
-            href="#Home"
+            href="./index.html"
           >
             <i class="fa fa-home"></i>
             Home
-          </button>
+        </a>
         </li>
         <li class="nav-item my-1">
-          <button
+          <a
             type="button"
             class="btn btn-sm btn-color btn-block"
-            href="#Contact"
+            href="./contact.html"
           >
             <i class="bi bi-at"></i>
             Contact
-          </button>
+        </a>
         </li>
         <li class="nav-item my-1">
-          <button
+          <a
             type="button"
             class="btn btn-sm btn-color btn-block"
-            href="#About"
+            href="./about.html"
           >
             <i class="bi bi-info-circle-fill"></i>
             About
-          </button>
+        </a>
         </li>
       </ul>
     </div>
 
     <div class="main-content">
       <div class="card">
+        <div class="card-body text-center">
         <img
           class="card-img-top"
           src="./imgs/santashelper.png"
           alt="dog"
         />
-        <div class="card-body">Santa's Little Helper</div>
+        <div class="card-title"><a href="#">Santa's Little Helper</a></div></div>
+        <p class="card-text"> Text goes here</p>
       </div>
 
       <div class="card">
-        <img class="card-img-top" src="./imgs/2stupiddogs.png" alt="dog" />
-        <div class="card-body">SPECIAL: Two Stupid Dogs</div>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-          doloremque.
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-          doloremque.
-        </p>
-      </div>
+        <div class="card-body text-center">
+          <img
+            class="card-img-top"
+            src="./imgs/2stupiddogs.png"
+            alt="dogs"
+          />
+          <div class="card-title"><a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a></div></div>
+          <p class="card-text"> Text goes here</p>
+        </div>
+
+      <div class="card">
+        <div class="card-body text-center">
+          <img
+            class="card-img-top"
+            src="./imgs/tom.png"
+            alt="cat"
+          />
+          <div class="card-title"><a href="#">Tom</a></div></div>
+          <p class="card-text"> Text goes here</p>
+        </div>
+
+      <div class="card">
+        <div class="card-body text-center">
+          <img
+            class="card-img-top"
+            src="./imgs/dino.png"
+            alt="dog"
+          />
+          <div class="card-title"><a href="#">Dino</a></div></div>
+          <p class="card-text"> Text goes here</p>
+        </div>
+
       <div>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
@@ -137,6 +152,7 @@
         </p>
       </div>
     </div>
+    <footer>John Paul's Pet Store 2022</footer>
     <script src="./app.js"></script>
   </body>
 </html>
