--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <li class="nav-item my-1">
           <a
             type="button"
-            class="btn btn-sm btn-color btn-block"
+            class="btn btn-primary btn-sm btn-block"
             href="./index.html"
           >
             <i class="fa fa-home"></i>
@@ -38,7 +38,7 @@
         <li class="nav-item my-1">
           <a
             type="button"
-            class="btn btn-sm btn-color btn-block"
+            class="btn btn-primary btn-sm btn-block"
             href="./contact.html"
           >
             <i class="bi bi-at"></i>
@@ -48,7 +48,7 @@
         <li class="nav-item my-1">
           <a
             type="button"
-            class="btn btn-sm btn-color btn-block"
+            class="btn btn-primary btn-sm btn-block"
             href="./about.html"
           >
             <i class="bi bi-info-circle-fill"></i>
