--- a/index.html
+++ b/index.html
@@ -26,34 +26,22 @@
     <div class="sidenav">
       <ul class="nav flex-column d-block">
         <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-sm btn-color btn-block"
-            href="./index.html"
-          >
+          <a type="button" class="btn btn-primary btn-sm btn-block" href="./index.html">
             <i class="fa fa-home"></i>
             Home
-        </a>
+          </a>
         </li>
         <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-sm btn-color btn-block"
-            href="./contact.html"
-          >
+          <a type="button" class="btn btn-primary btn-sm btn-block" href="./contact.html">
             <i class="bi bi-at"></i>
             Contact
-        </a>
+          </a>
         </li>
         <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-sm btn-color btn-block"
-            href="./about.html"
-          >
+          <a type="button" class="btn btn-primary btn-sm btn-block" href="./about.html">
             <i class="bi bi-info-circle-fill"></i>
             About
-        </a>
+          </a>
         </li>
       </ul>
     </div>
@@ -61,47 +49,37 @@
     <div class="main-content">
       <div class="card">
         <div class="card-body text-center">
-        <img
-          class="card-img-top"
-          src="./imgs/santashelper.png"
-          alt="dog"
-        />
-        <div class="card-title"><a href="#">Santa's Little Helper</a></div></div>
-        <p class="card-text"> Text goes here</p>
+          <img class="card-img-top" src="./imgs/santashelper.png" alt="dog" />
+          <div class="card-title"><a href="#">Santa's Little Helper</a></div>
+        </div>
+        <p class="card-text">Text goes here</p>
       </div>
 
       <div class="card">
         <div class="card-body text-center">
-          <img
-            class="card-img-top"
-            src="./imgs/2stupiddogs.png"
-            alt="dogs"
-          />
-          <div class="card-title"><a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a></div></div>
-          <p class="card-text"> Text goes here</p>
+          <img class="card-img-top" src="./imgs/2stupiddogs.png" alt="dogs" />
+          <div class="card-title">
+            <a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a>
+          </div>
         </div>
+        <p class="card-text">Text goes here</p>
+      </div>
 
       <div class="card">
         <div class="card-body text-center">
-          <img
-            class="card-img-top"
-            src="./imgs/tom.png"
-            alt="cat"
-          />
-          <div class="card-title"><a href="#">Tom</a></div></div>
-          <p class="card-text"> Text goes here</p>
+          <img class="card-img-top" src="./imgs/tom.png" alt="cat" />
+          <div class="card-title"><a href="#">Tom</a></div>
         </div>
+        <p class="card-text">Text goes here</p>
+      </div>
 
       <div class="card">
         <div class="card-body text-center">
-          <img
-            class="card-img-top"
-            src="./imgs/dino.png"
-            alt="dog"
-          />
-          <div class="card-title"><a href="#">Dino</a></div></div>
-          <p class="card-text"> Text goes here</p>
+          <img class="card-img-top" src="./imgs/dino.png" alt="dog" />
+          <div class="card-title"><a href="#">Dino</a></div>
         </div>
+        <p class="card-text">Text goes here</p>
+      </div>
 
       <div>
         <p>
