--- a/contact.html
+++ b/contact.html
@@ -26,34 +26,22 @@
     <div class="sidenav">
         <ul class="nav flex-column d-block">
           <li class="nav-item my-1">
-            <a
-              type="button"
-              class="btn btn-sm btn-color btn-block"
-              href="./index.html"
-            >
+            <a type="button" class="btn btn-primary btn-sm btn-block" href="./index.html">
               <i class="fa fa-home"></i>
               Home
-          </a>
+            </a>
           </li>
           <li class="nav-item my-1">
-            <a
-              type="button"
-              class="btn btn-sm btn-color btn-block"
-              href="./contact.html"
-            >
+            <a type="button" class="btn btn-primary btn-sm btn-block" href="./contact.html">
               <i class="bi bi-at"></i>
               Contact
-          </a>
+            </a>
           </li>
           <li class="nav-item my-1">
-            <a
-              type="button"
-              class="btn btn-sm btn-color btn-block"
-              href="./about.html"
-            >
+            <a type="button" class="btn btn-primary btn-sm btn-block" href="./about.html">
               <i class="bi bi-info-circle-fill"></i>
               About
-          </a>
+            </a>
           </li>
         </ul>
       </div>
