added footer and adjusted main part of about/contact

--- a/about.html
+++ b/about.html
@@ -22,44 +22,98 @@
     <title>Pet Store - About</title>
   </head>
   <body>
-    <header>John Paul's Pet Store</header>
-    <div class="sidenav">
-      <ul class="nav flex-column d-block">
-        <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-primary btn-sm btn-block"
-            href="./index.html"
-          >
-            <i class="fa fa-home"></i>
-            Home
-          </a>
-        </li>
-        <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-primary btn-sm btn-block"
-            href="./contact.html"
-          >
-            <i class="bi bi-at"></i>
-            Contact
-          </a>
-        </li>
-        <li class="nav-item my-1">
-          <a
-            type="button"
-            class="btn btn-primary btn-sm btn-block"
-            href="./about.html"
-          >
-            <i class="bi bi-info-circle-fill"></i>
-            About
-          </a>
-        </li>
-      </ul>
-    </div>
+    <div id="page-container">
+      <div id="content-wrap">
+        <header>John Paul's Pet Store</header>
+        <div class="sidenav">
+          <ul class="nav flex-column d-block">
+            <li class="nav-item my-1">
+              <a
+                type="button"
+                class="btn btn-primary btn-sm btn-block"
+                href="./index.html"
+              >
+                <i class="fa fa-home"></i>
+                Home
+              </a>
+            </li>
+            <li class="nav-item my-1">
+              <a
+                type="button"
+                class="btn btn-primary btn-sm btn-block"
+                href="./contact.html"
+              >
+                <i class="bi bi-at"></i>
+                Contact
+              </a>
+            </li>
+            <li class="nav-item my-1">
+              <a
+                type="button"
+                class="btn btn-primary btn-sm btn-block"
+                href="./about.html"
+              >
+                <i class="bi bi-info-circle-fill"></i>
+                About
+              </a>
+            </li>
+          </ul>
+        </div>
 
-    <div class="main-content"></div>
-    <footer>John Paul's Pet Store 2022</footer>
-    <script src="./app.js"></script>
+        <div class="main-content">
+          <h1 class="text-center">About</h1>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
+              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
+              Exercitationem, doloremque.
+            </p>
+          </div>
+        </div>
+      </div>
+      <footer>John Paul's Pet Store 2022</footer>
+      <script src="./app.js"></script>
+    </div>
   </body>
 </html>
