--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,8 @@
     <title>Pet Store - Contact</title>
   </head>
   <body>
+    <div id="page-container">
+      <div id="content-wrap">
     <header>John Paul's Pet Store</header>
     <div class="sidenav">
         <ul class="nav flex-column d-block">
@@ -47,8 +49,10 @@
       </div>
 
     <div class="main-content">
-    </div>
+      <h1 class="text-center">Contact</h1>
+    </div></div>
     <footer>John Paul's Pet Store 2022</footer>
     <script src="./app.js"></script>
+  </div>
   </body>
 </html>
