--- a/about.html
+++ b/about.html
@@ -28,31 +28,19 @@
         <div class="sidenav">
           <ul class="nav flex-column d-block">
             <li class="nav-item my-1">
-              <a
-                type="button"
-                class="btn btn-primary btn-sm btn-block"
-                href="./index.html"
-              >
+              <a class="btn btn-primary btn-sm btn-block" href="./index.html">
                 <i class="fa fa-home"></i>
                 Home
               </a>
             </li>
             <li class="nav-item my-1">
-              <a
-                type="button"
-                class="btn btn-primary btn-sm btn-block"
-                href="./contact.html"
-              >
+              <a class="btn btn-primary btn-sm btn-block" href="./contact.html">
                 <i class="bi bi-at"></i>
                 Contact
               </a>
             </li>
             <li class="nav-item my-1">
-              <a
-                type="button"
-                class="btn btn-primary btn-sm btn-block"
-                href="./about.html"
-              >
+              <a class="btn btn-primary btn-sm btn-block" href="./about.html">
                 <i class="bi bi-info-circle-fill"></i>
                 About
               </a>
