--- a/contact.html
+++ b/contact.html
@@ -24,35 +24,36 @@
   <body>
     <div id="page-container">
       <div id="content-wrap">
-    <header>John Paul's Pet Store</header>
-    <div class="sidenav">
-        <ul class="nav flex-column d-block">
-          <li class="nav-item my-1">
-            <a type="button" class="btn btn-primary btn-sm btn-block" href="./index.html">
-              <i class="fa fa-home"></i>
-              Home
-            </a>
-          </li>
-          <li class="nav-item my-1">
-            <a type="button" class="btn btn-primary btn-sm btn-block" href="./contact.html">
-              <i class="bi bi-at"></i>
-              Contact
-            </a>
-          </li>
-          <li class="nav-item my-1">
-            <a type="button" class="btn btn-primary btn-sm btn-block" href="./about.html">
-              <i class="bi bi-info-circle-fill"></i>
-              About
-            </a>
-          </li>
-        </ul>
-      </div>
+        <header>John Paul's Pet Store</header>
+        <div class="sidenav">
+          <ul class="nav flex-column d-block">
+            <li class="nav-item my-1">
+              <a class="btn btn-primary btn-sm btn-block" href="./index.html">
+                <i class="fa fa-home"></i>
+                Home
+              </a>
+            </li>
+            <li class="nav-item my-1">
+              <a class="btn btn-primary btn-sm btn-block" href="./contact.html">
+                <i class="bi bi-at"></i>
+                Contact
+              </a>
+            </li>
+            <li class="nav-item my-1">
+              <a class="btn btn-primary btn-sm btn-block" href="./about.html">
+                <i class="bi bi-info-circle-fill"></i>
+                About
+              </a>
+            </li>
+          </ul>
+        </div>
 
-    <div class="main-content">
-      <h1 class="text-center">Contact</h1>
-    </div></div>
-    <footer>John Paul's Pet Store 2022</footer>
-    <script src="./app.js"></script>
-  </div>
+        <div class="main-content">
+          <h1 class="text-center">Contact</h1>
+        </div>
+      </div>
+      <footer>John Paul's Pet Store 2022</footer>
+      <script src="./app.js"></script>
+    </div>
   </body>
 </html>
