--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <div class="sidenav">
       <ul class="nav flex-column d-block">
         <li class="nav-item my-1">
-          <a type="button" class="btn btn-primary btn-sm btn-block" href="./index.html">
+          <a class="btn btn-primary btn-sm btn-block" href="./index.html">
             <i class="fa fa-home"></i>
             Home
           </a>
         </li>
         <li class="nav-item my-1">
-          <a type="button" class="btn btn-primary btn-sm btn-block" href="./contact.html">
+          <a class="btn btn-primary btn-sm btn-block" href="./contact.html">
             <i class="bi bi-at"></i>
             Contact
           </a>
         </li>
         <li class="nav-item my-1">
-          <a type="button" class="btn btn-primary btn-sm btn-block" href="./about.html">
+          <a class="btn btn-primary btn-sm btn-block" href="./about.html">
             <i class="bi bi-info-circle-fill"></i>
             About
           </a>
@@ -75,8 +75,16 @@
 
       <div class="card">
         <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/dino.png" alt="dog" />
+          <img class="card-img-top" src="./imgs/dino.png" alt="dinosaur" />
           <div class="card-title"><a href="#">Dino</a></div>
+        </div>
+        <p class="card-text">Text goes here</p>
+      </div>
+
+      <div class="card">
+        <div class="card-body text-center">
+          <img class="card-img-top" src="./imgs/bugsbunny.png" alt="bunny" />
+          <div class="card-title"><a href="#">Bugs Bunny</a></div>
         </div>
         <p class="card-text">Text goes here</p>
       </div>
