--- a/index.html
+++ b/index.html
@@ -47,48 +47,73 @@
     </div>
 
     <div class="main-content">
-      <div class="card">
-        <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/santashelper.png" alt="dog" />
-          <div class="card-title"><a href="#">Santa's Little Helper</a></div>
-        </div>
-        <p class="card-text">Text goes here</p>
-      </div>
+      <div class="container">
+        <div class="row">
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img
+                class="card-img-top"
+                src="./imgs/santashelper.png"
+                alt="dog"
+              />
+              <div class="card-title">
+                <a href="#">Santa's Little Helper</a>
+              </div>
+            </div>
+            <p class="card-text">Text goes here</p>
+          </div>
 
-      <div class="card">
-        <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/2stupiddogs.png" alt="dogs" />
-          <div class="card-title">
-            <a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a>
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img
+                class="card-img-top"
+                src="./imgs/2stupiddogs.png"
+                alt="dogs"
+              />
+              <div class="card-title">
+                <a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a>
+              </div>
+            </div>
+            <p class="card-text">Text goes here</p>
+          </div>
+
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img class="card-img-top" src="./imgs/tom.png" alt="cat" />
+              <div class="card-title"><a href="#">Tom</a></div>
+            </div>
+            <p class="card-text">Text goes here</p>
+          </div>
+
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img class="card-img-top" src="./imgs/dino.png" alt="dinosaur" />
+              <div class="card-title"><a href="#">Dino</a></div>
+            </div>
+            <p class="card-text">Text goes here</p>
+          </div>
+
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img
+                class="card-img-top"
+                src="./imgs/bugsbunny.png"
+                alt="bunny"
+              />
+              <div class="card-title"><a href="#">Bugs Bunny</a></div>
+            </div>
+            <p class="card-text">Text goes here</p>
+          </div>
+
+          <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card-body text-center">
+              <img class="card-img-top" src="./imgs/Crush.png" alt="bunny" />
+              <div class="card-title"><a href="#">Crush</a></div>
+            </div>
+            <p class="card-text">Text goes here</p>
           </div>
         </div>
-        <p class="card-text">Text goes here</p>
       </div>
-
-      <div class="card">
-        <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/tom.png" alt="cat" />
-          <div class="card-title"><a href="#">Tom</a></div>
-        </div>
-        <p class="card-text">Text goes here</p>
-      </div>
-
-      <div class="card">
-        <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/dino.png" alt="dinosaur" />
-          <div class="card-title"><a href="#">Dino</a></div>
-        </div>
-        <p class="card-text">Text goes here</p>
-      </div>
-
-      <div class="card">
-        <div class="card-body text-center">
-          <img class="card-img-top" src="./imgs/bugsbunny.png" alt="bunny" />
-          <div class="card-title"><a href="#">Bugs Bunny</a></div>
-        </div>
-        <p class="card-text">Text goes here</p>
-      </div>
-
       <div>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
