--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="main-content">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="card-body text-center">
