--- a/about.html
+++ b/about.html
@@ -50,58 +50,20 @@
 
         <div class="main-content">
           <h1 class="text-center">About</h1>
+          <h4 class="text-center">Welcome to John Paul's Pet Store!</h4> 
+          <p class="text-center"> Here you will find a great selection of awesome pets and pet accessories</p>
           <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
-          </div>
-          <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
-          </div>
-          <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
-          </div>
-          <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
-          </div>
-          <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
-          </div>
-          <div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
-              vel ex in ipsum, asperiores nostrum quis veniam, nulla nobis,
-              nesciunt obcaecati autem nam quia ut! Aut, dolorum nihil?
-              Exercitationem, doloremque.
-            </p>
+            <div class="hours-container">
+          <ul class="hours text-center pl-0">Hours of operation:
+            <li>M-F 8 AM - 8 PM</li>
+            <li>Saturday 10 AM - 10 PM</li>
+            <li>Sunday CLOSED</li>
+          </ul>
           </div>
         </div>
-      </div>
+            
       <footer>John Paul's Pet Store 2022</footer>
-      <script src="./app.js"></script>
     </div>
+      <script src="./app.js"></script>
   </body>
 </html>
