added word weekdays

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
           <div>
             <div class="hours-container">
           <ul class="hours text-center pl-0">Hours of operation:
-            <li>M-F 8 AM - 8 PM</li>
+            <li>Weekdays 8 AM - 8 PM</li>
             <li>Saturday 10 AM - 10 PM</li>
             <li>Sunday CLOSED</li>
           </ul>
