--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
 
     <div class="main-content">
+      <h1 class="text-center">Welcome to John Paul's Pet Store!</h1>
       <div class="container-fluid">
         <div class="row">
           <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
