--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="main-content">
-          <h4 class="text-center">John Paul's Pet Store!</h4> 
+          <h4 class="text-center">About John Paul's Pet Store!</h4> 
           <p class="about"> Founded in 2022 with a dollar and a dream, John Paul's pet store offers the finest in unique animals with personality. Here you will find a great selection of awesome pets and pet accessories.</p>
           <div>
             <div class="hours-container">
