--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 alt="dogs"
               />
               <div class="card-title">
-                <a href="#">SPECIAL: 2 Stupid Dogs for Price of 1</a>
+                <a href="#">SPECIAL: 2 Stupid Dogs for price of 1</a>
               </div>
             </div>
             <p class="card-text">Text goes here</p>
