--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <!-- NAVBAR -->
 
     <header>John Paul's Pet Store</header>
+    
     <div class="sidenav">
       <ul class="nav flex-column d-block">
         <li class="nav-item my-1">
@@ -49,10 +50,16 @@
       </ul>
     </div>
 
+    <!-- SHOP -->
+    <div class="container">
+    <div class="shop-container testing" id="shop">
+    </div></div>
+
+
 <!-- MAIN CONTENT -->
 
-    <div class="main-content">
-      <div class="container-fluid">
+    <!-- <div class="main-content"> -->
+      <!-- <div class="container-fluid">
         <div class="row">
           
           <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -129,15 +136,8 @@
 
         </div>
       </div>
-      <div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt vel
-          ex in ipsum, asperiores nostrum quis veniam, nulla nobis, nesciunt
-          obcaecati autem nam quia ut! Aut, dolorum nihil? Exercitationem,
-          doloremque.
-        </p>
-      </div>
-
+       -->
+<div class="footer">
       <footer>John Paul's Pet Store 2022</footer>
     </div>
     <script src="./app.js"></script>
